fixed: button overflow bug

--- a/src/app/components/home/nav-bar/nav-bar.component.scss
+++ b/src/app/components/home/nav-bar/nav-bar.component.scss
@@ -7,12 +7,6 @@
 }
   
 .nav-bar{
-  // background-color: #FFFFFF;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.35);   
-  position: relative; 
-  z-index: 2;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  height: 5vh;
+  z-index: 1;
 }
